unpackaged/main/default/objects/litify_ext__Scheduling_Time__c/litify_ext__Scheduling_Time__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Scheduling App</description>
    <label>Scheduling Time</label>
</CustomObject>