unpackaged/main/default/objects/litify_ext__Scheduling_Time__c/fields/litify_ext__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Order__c</fullName>
    <label>Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>