unpackaged/main/default/objects/litify_ext__Scheduling_Time__c/fields/litify_ext__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Start_Time__c</fullName>
    <label>Start Time</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>