unpackaged/main/default/objects/litify_ext__Scheduling_Time__c/fields/litify_ext__Time_Separation__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Time_Separation__c</fullName>
    <label>Time Separation</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>