unpackaged/main/default/objects/litify_ext__Scheduling_Time__c/fields/litify_ext__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Type__c</fullName>
    <label>Type</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>