unpackaged/main/default/objects/litify_ext__Scheduling_Time__c/listViews/Investigator_Scheduler.listView-meta.xml
<ListView>
    <fullName>Investigator_Scheduler</fullName>
    <columns>NAME</columns>
    <columns>litify_ext__Start_Time__c</columns>
    <columns>litify_ext__End_Time__c</columns>
    <columns>litify_ext__Time_Separation__c</columns>
    <columns>litify_ext__Order__c</columns>
    <columns>litify_ext__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Investigator Scheduler</label>
</ListView>